fix spacing

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/DataQualitySection/DataQualitySection.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/DataQualitySection/DataQualitySection.less
@@ -24,7 +24,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 12px;
+    margin: 8px;
     border: 1px solid transparent;
     cursor: pointer;
     transition: all 0.2s ease;
